--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
+  - title: "Professional Experience"
+    url: "/#-Professional-Experience"
 
   - title: "Internships"
     url: "/#-internships"
