--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author:
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
-  kaggle           : https://www.kaggle.com/biansun
+  kaggle           : biansun
   tumblr           :
   twitter          : 
   vine             :
