--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Bian Sun"
-description              : "Every effort you make today will illuminate your future self. Blague does nothing but waste saliva."
+description              : "Every effort you make today will illuminate your future self."
 repository               : "sunningilyA7/sunningilyA7.github.io"
 google_scholar_stats_use_cdn : true
 
