--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : # e.g., "linkedin username"
-  WIKI             : https://first-chance-6ad.notion.site/1e313f5a4c0e8039933ee7facb1808c1?v=1e313f5a4c0e80dd966d000c0812b826&pvs=4
+  Wiki             : https://first-chance-6ad.notion.site/1e313f5a4c0e8039933ee7facb1808c1?v=1e313f5a4c0e80dd966d000c0812b826&pvs=4
   orcid            : # e.g., "https://orcid.org/xxxx"
   pinterest        :
   soundcloud       :
