--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Bian Sun"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Researcher, LLM Architecture"
+  bio              : "Incoming PhD student, LLM Architecture"
   location         : "Pittsburgh, PA"
   employer         :
   pubmed           : 
