Update author location from Pittsburgh to Florida

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Bian Sun"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "PhD student, LLM Architecture"
-  location         : "Pittsburgh, PA"
+  location         : "Florida"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=X1jzJs8AAAAJ"
